# aevalo

./: .env.example  .gitignore  BUILD_GUIDE.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  INDEX.md  Jenkinsfile  Makefile  README.md  SECURITY.md  SECURITY_ACKNOWLEDGMENTS.md  docker-compose.yml  setup-auth-system.sh  setup-contributor.sh  setup-dev.sh
.github/: CODEOWNERS  COMMUNITY_STANDARDS_VISUAL.html  CONTRIBUTING_WELCOME.md  PULL_REQUEST_TEMPLATE.md  QUICK_REFERENCE.md  README.md  github-settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
backend/: .env.example  API-EXAMPLES.json  BACKEND-README.md  Cargo.toml  FLOW-DIAGRAM.md  IMPLEMENTATION.md  START-HERE.md  test-api.sh
backend/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_sessions_and_audit.sql  004_security_audit.sql
backend/scripts/: seed_db.sh
backend/src/: error.rs  main.rs
backend/src/db/: mod.rs
backend/src/graphql/: mod.rs  mutations.rs  queries.rs  schema.rs
backend/src/handlers/: ai_generation.rs  analytics.rs  auth.rs  evaluations.rs  mod.rs  public.rs  responses.rs
backend/src/middleware/: auth.rs  mod.rs  security_headers.rs
backend/src/models/: mod.rs
backend/src/modules/: analytics.rs  auth.rs  categories.rs  evaluations.rs  mod.rs  questions.rs  responses.rs  security.rs
doc/engineering/: IMPLEMENTATION_GUIDE.md  README.md  desc.md  roadmap.md  session_mod.md  techdesign.md
doc/engineering/fsm/: fsm_user.md
doc/engineering/uml/: class_diagram.md  seq_diagram.md
frontend/: .env.example  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: AnalyticsChart.vue  EvaluationList.vue  SearchBar.vue  UserDropdown.vue
frontend/src/composables/: useAuthInterceptor.ts  useMultiTabSync.ts
frontend/src/graphql/: client.ts  mutations.ts  queries.ts
frontend/src/lib/: supabase.ts
frontend/src/pages/: CreateEvaluation.vue  Dashboard.vue  EvaluationDetail.vue  Login.vue  Register.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  evaluationStore.ts
frontend/src/styles/: tailwind.css
frontend/src/types/: auth.ts  utils.ts
frontend/src/utils/: auth-client.ts
infra/docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
infra/monitoring/: alerting_rules.yml  prometheus.yml
